<resources>
    <string name="app_name">WebSaver</string>
    <string name="settings_key_import">Import</string>
    <string name="settings_summary_import">Import data from csv</string>
    <string name="settings_key_export">Export</string>
    <string name="settings_summary_export">Export data as csv</string>
    <string name="settings_category_data">Data</string>
    <string name="select_all">select All</string>
    <string name="settings_debug_mode">Debug Mode</string>
    <string name="settings_debug_title">Debug</string>
    <string name="settings_share_computer">Browse on computer</string>
    <string name="settings_share">Share</string>
</resources>
